Alignment fixes

--- a/less/bootstrap-override/forms.less
+++ b/less/bootstrap-override/forms.less
@@ -255,7 +255,7 @@ input[type="checkbox"] {
 	display: block;
 	min-height: @line-height-computed; // clear the floating input if there is no label text
 	margin-top: 10px;
-	margin-bottom: 10px;
+	margin-bottom: 5px;
 	
 
 	label {
