--- a/less/fuelux-override/checkbox-no-js.less
+++ b/less/fuelux-override/checkbox-no-js.less
@@ -1,6 +1,6 @@
-.checkbox-element-sizes() {
-	width: @checkbox-width;
-	height: @checkbox-height;
+.checkbox-no-js-element-sizes() {
+	width: @checkbox-no-js-width;
+	height: @checkbox-no-js-height;
 }
 
 
@@ -16,14 +16,17 @@
 				border-color: none;
 				.fuelux-icon;
 				.fuelux-icon-checkbox;
-				.checkbox-element-sizes;
+				.checkbox-no-js-element-sizes;
 				-webkit-appearance: inherit;
 				border: 0px solid transparent;
 				border-radius: 0;
 				content: "" !important;
 				padding: 0;
 				position: relative;
-				top: 2px;
+				// top: 2px;
+				margin-bottom: -4px;
+				margin-top: -1px;
+				margin-right: 1px;
 			}
 		}
 
@@ -31,7 +34,7 @@
 			& ~ label {
 				&:before {
 					.fuelux-icon-checkbox-hover;
-					.checkbox-element-sizes;
+					.checkbox-no-js-element-sizes;
 				}
 			}
 		}
@@ -46,7 +49,9 @@
 					content: "" !important;
 					padding: 0;
 					.fuelux-icon-checkbox-checked;
-					.checkbox-element-sizes;
+					.checkbox-no-js-element-sizes;
+					margin-bottom: -4px;
+					margin-top: -1px;
 				}
 			}
 		}
@@ -61,7 +66,7 @@
 					content: "" !important;
 					padding: 0;
 					.fuelux-icon-checkbox-checked-hover;
-					.checkbox-element-sizes;
+					.checkbox-no-js-element-sizes;
 				}
 			}
 		}
@@ -82,7 +87,14 @@
 	&.highlight {
 		input:not(.sr-only) {
 			& ~ label {
-				left: 0px;
+				// left: 0px;
+			}
+		}
+		& + & {
+			margin-top: 8px;
+			label.checkbox-custom {
+				margin-top: -5px;
+				top: -3px;
 			}
 		}
 	}
